<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Encuesta">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="108dp"
        app:srcCompat="@drawable/download" />

    <LinearLayout
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="156dp"
            android:layout_height="match_parent"
            android:text="@string/bienvenido"
            android:textColor="#3F51B5"
            app:layout_constraintVertical_bias="0.0" />

    </LinearLayout>

    <TextView
        android:id="@+id/etUser"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:text="@string/usuario"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="369dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/pregunta1"
            android:textColor="#3F51B5"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <EditText
            android:id="@+id/etRespuesta1"
            android:layout_width="308dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/respuesta"
            android:inputType="textPersonName"
            app:layout_constraintVertical_bias="1.0" />


        <TextView
            android:id="@+id/textView5"
            android:layout_width="222dp"
            android:layout_height="22dp"
            android:layout_marginTop="20dp"
            android:text="@string/pregunta2"
            android:textColor="#3F51B5" />

        <CheckBox
            android:id="@+id/cbOpcion1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/futbol" />

        <CheckBox
            android:id="@+id/cbOpcion2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/basketball" />

        <CheckBox
            android:id="@+id/cbOpcion3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voley" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/pregunta3"
            android:textColor="#3F51B5" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="120dp"
            android:layout_height="97dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp">

            <RadioButton
                android:id="@+id/rbOpcion1"
                android:layout_width="115dp"
                android:layout_height="30dp"
                android:checked="true"
                android:text="@string/si"
                tools:layout_editor_absoluteX="34dp"
                tools:layout_editor_absoluteY="209dp" />

            <RadioButton
                android:id="@+id/rbOpcion2"
                android:layout_width="113dp"
                android:layout_height="31dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="44dp"
                android:layout_marginRight="44dp"
                android:layout_marginBottom="36dp"
                android:text="@string/no" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/btnEnviarRespuestas"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginStart="74dp"
        android:layout_marginLeft="74dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="132dp"
        android:onClick="enviarRespuestas"
        android:text="@string/enviar" />
</LinearLayout>
